move micro-services to mother-frontend

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,5 +6,5 @@ packages:
   - core/tests/*
   - core/toolkit
   - micro-apps
-  - micro-services
   - mother-frontend
+  - mother-frontend/micro-services
