--- a/mother-frontend/package.json
+++ b/mother-frontend/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@windows98/mother-frontend",
 	"version": "1.0.0",
-	"description": "Micro services for Windows 98",
+	"description": "Mother frontend for Windows 98",
 	"author": "Arkadiusz Paściak",
 	"engines": {
 	  "node": "18.16.0"
@@ -10,11 +10,13 @@
 		"@vitejs/plugin-vue": "4.2.3",
 		"@windows98/i18n": "workspace:*",
 		"@windows98/toolkit": "workspace:*",
+		"jsdom": "^22.1.0",
 		"mobx": "6.12.0",
-    "mobx-vue-lite": "0.4.1",
+		"mobx-vue-lite": "0.4.1",
 		"sass": "1.62.1",
 		"typescript": "5.0.4",
 		"vite": "4.3.9",
+		"vitest": "^0.31.4",
 		"vue": "3.3.4",
 		"vue-i18n": "9.2.2"
 	}
