--- a/mother-frontend/package.json
+++ b/mother-frontend/package.json
@@ -16,6 +16,7 @@
     "sass": "1.62.1",
     "typescript": "5.0.4",
     "vite": "4.3.9",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.31.4",
     "vue": "3.3.4",
     "vue-i18n": "9.2.2"
