connect with ui components in micro-app which will move to ui workspace in the future

--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -5,5 +5,8 @@
   "author": "Arkadiusz Paściak",
   "engines": {
     "node": "18.16.0"
+  },
+  "devDependencies": {
+    "@windows98/app": "workspace:*"
   }
 }
