--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "./src",
     "./core/tests/cypress",
     "./app",
-    "./mother-frontend"
+    "./mother-frontend/micro-services"
   ],
   "exclude": ["src/configs/*.config.js"]
 }
