Patch 0.4.6 mother frontend (#60)

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,4 +5,7 @@ packages:
   - core/linters/*
   - core/tests/*
   - core/toolkit
-  - micro-services
+  - micro-apps
+  - mother-frontend
+  - mother-frontend/micro-apps
+  - mother-frontend/micro-services
