--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "@windows98/micro-apps",
-  "version": "1.0.0",
-  "description": "Micro apps for Windows 98",
   "author": "Arkadiusz Paściak",
+  "dependencies": {
+    "vue": "^3.3.11"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "4.5.2",
+    "@windows98/i18n": "workspace:*",
+    "@windows98/toolkit": "workspace:*",
+    "mobx": "6.12.0",
+    "mobx-vue-lite": "0.4.1",
+    "sass": "1.62.1",
+    "typescript": "5.2.2",
+    "vite": "5.0.8",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vue-tsc": "1.8.25",
+    "vue-i18n": "9.2.2"
+  },
   "engines": {
     "node": "18.16.0"
   },
-  "devDependencies": {
-    "@windows98/app": "workspace:*"
-  }
+  "name": "@windows98/micro-apps",
+  "scripts": {
+    "dev": "vite @bundler",
+    "build": "vite build @bundler",
+    "preview": "vite preview @bundler"
+  },
+  "type": "module",
+  "version": "1.0.0"
 }
