--- a/mother-frontend/micro-services/package.json
+++ b/mother-frontend/micro-services/package.json
@@ -5,5 +5,9 @@
   "author": "Arkadiusz Paściak",
   "engines": {
     "node": "18.16.0"
+  },
+  "devDependencies": {
+    "@windows98/toolkit": "workspace:*",
+    "vitest": "^0.31.4"
   }
 }
