@windows98/micro-apps: add @bundler prototype part 3

--- a/mother-frontend/micro-apps/tsconfig.json
+++ b/mother-frontend/micro-apps/tsconfig.json
@@ -21,6 +21,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "types": ["vite/client"],
+
+    /* Experimental */
+    "experimentalDecorators": true,
   },
   "include": ["@bundler/src/**/*", "@bundler/module.config.d.ts", "calendar"],
   "exclude": ["node_modules"],
