@windows98/micro-apps: add @bundler prototype part 4

--- a/mother-frontend/micro-apps/tsconfig.json
+++ b/mother-frontend/micro-apps/tsconfig.json
@@ -23,7 +23,7 @@
     "types": ["vite/client"],
 
     /* Experimental */
-    "experimentalDecorators": true,
+    "experimentalDecorators": true
   },
   "include": ["@bundler/src/**/*", "@bundler/module.config.d.ts", "calendar"],
   "exclude": ["node_modules"],
