--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -1,11 +1,28 @@
 {
-  "author": "Arkadiusz Paściak",
+  "name": "@windows98/design-system",
   "description": "Design System for Windows 98 project",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
   "engines": {
     "node": "18.16.0"
   },
   "license": "MIT",
-  "name": "@windows98/design-system",
   "packageManager": "pnpm@8.10.2",
-  "version": "1.0.0"
+  "scripts": {
+    "dev": "vite @bundler",
+    "build": "vite build @bundler",
+    "preview": "vite preview @bundler"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
+  }
 }
