--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -15,6 +15,7 @@
     "preview": "vite preview @bundler"
   },
   "dependencies": {
+    "@r2wc/react-to-web-component": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
