--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ pnpm-lock.yaml
 .vercel
 .temp
 .cache
+
+#Playwright
+node_modules/
+test-results/
+playwright-report/
+blob-report/
+playwright/.cache/
