--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -21,13 +21,17 @@
   "scripts": {
     "dev": "vite @bundler",
     "build": "vite build @bundler",
-    "preview": "vite preview @bundler"
+    "preview": "vite preview @bundler",
+    "test:integration:run": "playwright test -c ./@test/playwright/playwright-ct.config.ts",
+    "test:integration:watch": "playwright test -c ./@test/playwright/playwright-ct.config.ts --ui"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/experimental-ct-react": "^1.41.1",
+    "@types/node": "^20.9.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
