--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -1,22 +1,23 @@
 {
   "author": "Arkadiusz Paściak",
   "dependencies": {
-    "vue": "^3.3.11"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "4.5.2",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
     "@windows98/app": "workspace:*",
     "@windows98/design-system": "workspace:*",
     "@windows98/i18n": "workspace:*",
     "@windows98/toolkit": "workspace:*",
     "mobx": "6.12.0",
-    "mobx-vue-lite": "0.4.1",
+    "mobx-react-lite": "4.0.4",
+    "react-i18next": "^14.0.1",
     "sass": "1.62.1",
     "typescript": "5.2.2",
-    "vite": "5.0.8",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vue-tsc": "1.8.25",
-    "vue-i18n": "9.2.2"
+    "vite": "5.0.8"
   },
   "engines": {
     "node": "18.16.0"
