--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -7,11 +7,18 @@
   "engines": {
     "node": "18.16.0"
   },
-  "main": "@bundler/dist/index.umd.js",
+  "main": "@bundler/dist/index.umd.cjs",
+  "module": "@bundler/dist/index.js",
   "types": "@bundler/dist/index.d.ts",
   "files": [
     "@bundler/dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./@bundler/dist/index.js",
+      "require": "./@bundler/dist/index.umd.cjs"
+    }
+  },
   "license": "MIT",
   "packageManager": "pnpm@8.10.2",
   "scripts": {
