--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@windows98/design-system": "workspace:*",
     "@windows98/i18n": "workspace:*",
     "@windows98/micro-services": "workspace:*",
     "sass": "^1.62.1",
