--- a/core/design-system/tsconfig.json
+++ b/core/design-system/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "../../tsconfig.paths.json",
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -13,19 +12,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["vite/client"],
-
-    /* Experimental */
-    "experimentalDecorators": true
+    "types": ["vite/client"]
   },
-  "include": ["@bundler/src/**/*", "calendar"],
-  "exclude": ["node_modules"],
+  "include": ["@bundler", "src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
