--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -1,10 +1,13 @@
 {
   "author": "Arkadiusz Paściak",
+  "peerDependencies": {
+    "@windows98/i18n": "workspace:*",
+    "i18next": "23.8.2",
+    "react-i18next": "14.0.5"
+  },
   "dependencies": {
-    "i18next": "^23.8.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-i18next": "^14.0.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -12,7 +15,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@windows98/app": "workspace:*",
     "@windows98/design-system": "workspace:*",
-    "@windows98/i18n": "workspace:*",
     "@windows98/toolkit": "workspace:*",
     "mobx": "6.12.0",
     "mobx-react-lite": "4.0.4",
