--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -10,6 +10,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@playwright/experimental-ct-react": "^1.41.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
@@ -29,7 +30,9 @@
   "scripts": {
     "dev": "vite @bundler",
     "build": "vite build @bundler",
-    "preview": "vite preview @bundler"
+    "preview": "vite preview @bundler",
+    "test:integration:run": "playwright test -c ./@test/playwright/playwright-ct.config.ts",
+    "test:integration:watch": "playwright test -c ./@test/playwright/playwright-ct.config.ts --ui"
   },
   "type": "module",
   "version": "1.0.0"
