--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@windows98/design-system": "workspace:*",
     "@windows98/i18n": "workspace:*",
+    "@windows98/micro-apps": "workspace:*",
     "@windows98/micro-services": "workspace:*",
     "sass": "^1.62.1",
     "typescript": "^5.0.4",
