--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -13,14 +13,15 @@
     }
   },
   "peerDependencies": {
-    "@windows98/i18n": "workspace:*",
     "i18next": "23.8.2",
+    "mobx": "6.12.0",
+    "mobx-react-lite": "4.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "14.0.5"
   },
   "dependencies": {
-    "@r2wc/react-to-web-component": "^2.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@r2wc/react-to-web-component": "^2.0.3"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "^1.41.1",
@@ -29,9 +30,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@windows98/app": "workspace:*",
     "@windows98/design-system": "workspace:*",
+    "@windows98/i18n": "workspace:*",
     "@windows98/toolkit": "workspace:*",
-    "mobx": "6.12.0",
-    "mobx-react-lite": "4.0.4",
     "sass": "1.62.1",
     "typescript": "5.2.2",
     "vite": "5.0.8",
