--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -7,21 +7,21 @@
   "engines": {
     "node": "18.16.0"
   },
-  "main": "@bundler/dist/index.umd.cjs",
-  "module": "@bundler/dist/index.js",
-  "types": "@bundler/dist/index.d.ts",
+  "main": "@bundler/build/index.umd.cjs",
+  "module": "@bundler/build/index.js",
+  "types": "@bundler/build/index.d.ts",
   "files": [
-    "@bundler/dist"
+    "@bundler/build"
   ],
   "exports": {
     ".": {
-      "import": "./@bundler/dist/index.js",
-      "require": "./@bundler/dist/index.umd.cjs"
+      "import": "./@bundler/build/index.js",
+      "require": "./@bundler/build/index.umd.cjs"
     },
     "./base.config.css": "./src/styles/configs/base.config.css",
     "./index.config.scss": "./src/styles/configs/index.config.scss",
     "./reset.config.css": "./src/styles/configs/reset.config.css",
-    "./variables.config.css": "./@bundler/dist/styles/variables.config.css"
+    "./variables.config.css": "./@bundler/build/styles/variables.config.css"
   },
   "license": "MIT",
   "packageManager": "pnpm@8.10.2",
@@ -30,7 +30,7 @@
     "build": "pnpm run build:components && pnpm run build:styles",
     "build:components": "vite build @bundler",
     "build:styles": "pnpm run build:styles:variables",
-    "build:styles:variables": "sass ./src/styles/configs/variables.config.scss ./@bundler/dist/styles/variables.config.css --style=compressed",
+    "build:styles:variables": "sass ./src/styles/configs/variables.config.scss ./@bundler/build/styles/variables.config.css --style=compressed",
     "preview": "vite preview @bundler",
     "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.ts",
     "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.ts",
