--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -1,15 +1,15 @@
 {
   "author": "Arkadiusz Paściak",
-  "main": "@bundler/dist/index.umd.cjs",
-  "module": "@bundler/dist/index.js",
-  "types": "@bundler/dist/@bundles/src/wc/index.wc.d.ts",
+  "main": "@bundler/build/index.umd.cjs",
+  "module": "@bundler/build/index.js",
+  "types": "@bundler/build/@bundles/src/wc/index.wc.d.ts",
   "files": [
-    "@bundler/dist"
+    "@bundler/build"
   ],
   "exports": {
     ".": {
-      "import": "./@bundler/dist/index.js",
-      "require": "./@bundler/dist/index.umd.cjs"
+      "import": "./@bundler/build/index.js",
+      "require": "./@bundler/build/index.umd.cjs"
     }
   },
   "peerDependencies": {
