--- a/core/linters/eslint/package.json
+++ b/core/linters/eslint/package.json
@@ -2,12 +2,11 @@
   "author": "Arkadiusz Paściak",
   "description": "ESLint configuration for Windows 98 project",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-vue": "^9.14.1"
+    "@typescript-eslint/eslint-plugin": "7.1.0",
+    "@typescript-eslint/parser": "7.1.0",
+    "@vue/eslint-config-typescript": "12.0.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-vue": "9.22.0"
   },
   "engines": {
     "node": "18.16.0"
