feat(ma): import eslint config and lint all files

--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -30,6 +30,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@windows98/app": "workspace:*",
     "@windows98/design-system": "workspace:*",
+    "@windows98/eslint-config": "workspace:^",
     "@windows98/i18n": "workspace:*",
     "@windows98/toolkit": "workspace:*",
     "sass": "1.62.1",
@@ -47,6 +48,8 @@
     "dev": "vite @bundler",
     "build": "vite build @bundler",
     "preview": "vite preview @bundler",
+    "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "test:ui:run": "playwright test -c ./@test/playwright/playwright-ct.config.ts",
     "test:ui:watch": "playwright test -c ./@test/playwright/playwright-ct.config.ts --ui",
     "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.ts",
