feat(ds): import eslint config and set commands

--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -31,6 +31,8 @@
     "build:components": "vite build @bundler",
     "build:styles": "pnpm run build:styles:variables",
     "build:styles:variables": "sass ./src/styles/configs/variables.config.scss ./@bundler/build/styles/variables.config.css --style=compressed",
+    "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "preview": "vite preview @bundler",
     "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.ts",
     "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.ts",
@@ -47,6 +49,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "@windows98/eslint-config": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.70.0",
