--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -5,5 +5,13 @@
   "author": "Arkadiusz Paściak",
   "engines": {
     "node": "18.16.0"
+  },
+  "type": "module",
+  "devDependencies": {
+    "@windows98/eslint-config": "workspace:*"
+  },
+  "scripts": {
+    "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\""
   }
 }
