--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "app:build": "vite build --config ./configs/vite.config.ts",
     "app:dev": "vite --config ./configs/vite.config.ts",
-    "app:preview": "vite preview --config ./configs/vite.config.ts"
+    "app:preview": "vite preview --config ./configs/vite.config.ts",
+    "lint:js": "eslint -c ./@linter/eslint.config.cjs --ext \".ts,.js,.vue\" .",
+    "lintfix:js": "eslint -c ./@linter/eslint.config.cjs --fix --ext \".ts,.js,.vue\" ."
   },
   "dependencies": {
     "pinia": "^2.1.3",
@@ -18,18 +20,19 @@
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
+    "@pinia/testing": "^0.1.2",
     "@vitejs/plugin-vue": "5.0.4",
+    "@vue/test-utils": "^2.3.2",
     "@windows98/design-system": "workspace:*",
+    "@windows98/eslint-config": "workspace:^",
     "@windows98/i18n": "workspace:*",
     "@windows98/micro-apps": "workspace:*",
     "@windows98/micro-services": "workspace:*",
+    "jsdom": "^22.1.0",
     "sass": "^1.62.1",
     "typescript": "^5.0.4",
     "vite": "5.0.8",
     "vite-tsconfig-paths": "^4.2.0",
-    "jsdom": "^22.1.0",
-    "vitest": "^0.31.4",
-    "@pinia/testing": "^0.1.2",
-    "@vue/test-utils": "^2.3.2"
+    "vitest": "^0.31.4"
   }
 }
