fix(all): main tsconfig - exclude cjs files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,5 @@
     "./app",
     "./mother-frontend/micro-services"
   ],
-  "exclude": ["src/configs/*.config.js"]
+  "exclude": ["**/*.cjs"]
 }
