feat(linters): add new workspace, import eslint-config, lint all files

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - app
   - core/design-system
   - core/internationalization/*
+  - core/linters
   - core/linters/*
   - core/tests/*
   - core/toolkit
