feat(linters): remove prettier

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -118,39 +118,6 @@ jobs:
       - name: Lint with ESLint
         run: pnpm --filter @windows98/eslint-config run lintfix:js
 
-  prettier-lint:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.16.0]
-    needs: type-check
-    steps:
-      - name: Checkout Commit
-        uses: actions/checkout@v3.5.0
-
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Restore pnpm dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pnpm-store
-            node_modules
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-
-      - name: Install PNPM
-        run: npm install -g pnpm
-
-      - name: Install Dependencies
-        run: pnpm install
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
-
-      - name: Lint with Prettier
-        run: pnpm --filter @windows98/prettier run lintfix:prettier
-
   stylelint-lint:
     runs-on: ubuntu-latest
     strategy:
@@ -189,7 +156,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.16.0]
-    needs: [eslint-lint, prettier-lint, stylelint-lint]
+    needs: [eslint-lint, stylelint-lint]
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
