--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -30,10 +30,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@windows98/app": "workspace:*",
     "@windows98/design-system": "workspace:*",
-    "@windows98/eslint-config": "workspace:^",
+    "@windows98/eslint-config": "workspace:*",
     "@windows98/i18n": "workspace:*",
+    "@windows98/stylelint-config": "workspace:*",
     "@windows98/toolkit": "workspace:*",
     "sass": "1.62.1",
+    "stylelint": "16.2.1",
     "typescript": "5.2.2",
     "vite": "5.0.8",
     "vite-plugin-css-injected-by-js": "^3.3.1",
@@ -48,8 +50,10 @@
     "dev": "vite @bundler",
     "build": "vite build @bundler",
     "preview": "vite preview @bundler",
-    "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
-    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
+    "lint:js:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lint:js:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
+    "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\"",
+    "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\" --fix",
     "test:ui:run": "playwright test -c ./@test/playwright/playwright-ct.config.ts",
     "test:ui:watch": "playwright test -c ./@test/playwright/playwright-ct.config.ts --ui",
     "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.ts",
