--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
     "app:dev": "vite --config ./configs/vite.config.ts",
     "app:preview": "vite preview --config ./configs/vite.config.ts",
     "lint:js": "eslint -c ./@linter/eslint.config.cjs --ext \".ts,.js,.vue\" .",
-    "lintfix:js": "eslint -c ./@linter/eslint.config.cjs --fix --ext \".ts,.js,.vue\" ."
+    "lintfix:js": "eslint -c ./@linter/eslint.config.cjs --fix --ext \".ts,.js,.vue\" .",
+    "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"Bundles/**/*.scss\"",
+    "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"Bundles/**/*.scss\" --fix"
   },
   "dependencies": {
     "pinia": "^2.1.3",
@@ -28,8 +30,10 @@
     "@windows98/i18n": "workspace:*",
     "@windows98/micro-apps": "workspace:*",
     "@windows98/micro-services": "workspace:*",
+    "@windows98/stylelint-config": "workspace:*",
     "jsdom": "^22.1.0",
     "sass": "^1.62.1",
+    "stylelint": "16.2.1",
     "typescript": "^5.0.4",
     "vite": "5.0.8",
     "vite-tsconfig-paths": "^4.2.0",
