feat(linters): add peer dependencies typescript

--- a/core/linters/package.json
+++ b/core/linters/package.json
@@ -15,5 +15,8 @@
 	},
 	"devDependencies": {
 		"@windows98/eslint-config": "workspace:*"
+	},
+	"peerDependencies": {
+		"typescript": "5.4.2"
 	}
 }
