feat(linters): ts-configs - add configs react and vite and new configurations in base

--- a/core/linters/src/configs/ts-config/base.config.json
+++ b/core/linters/src/configs/ts-config/base.config.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
+		"allowImportingTsExtensions": true,
 		"allowJs": true,
+		"experimentalDecorators": true,
 		"isolatedModules": false,
 		"useDefineForClassFields": true,
 		"lib": [
@@ -8,7 +10,11 @@
 			"dom"
 		],
 		"module": "esnext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
+		"noEmit": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"strict": true,
