--- a/core/linters/package.json
+++ b/core/linters/package.json
@@ -7,7 +7,9 @@
 		"node": "18.16.0"
 	},
 	"exports": {
-		"./ts-config/base": "./src/configs/ts-config/base.config.json"
+		"./ts-config/base": "./src/configs/ts-config/base.config.json",
+		"./ts-config/react": "./src/configs/ts-config/react.config.json",
+		"./ts-config/vite": "./src/configs/ts-config/vite.config.json"
 	},
 	"scripts": {
 		"lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
