fix(ms): change exclude from string to array string and delete flag no emit in types:lint:run

--- a/mother-frontend/micro-services/package.json
+++ b/mother-frontend/micro-services/package.json
@@ -17,6 +17,6 @@
   "scripts": {
     "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
     "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
-    "lint:types:run": "tsc --noEmit"
+    "lint:types:run": "tsc"
   }
 }
