--- a/mother-frontend/micro-services/tsconfig.json
+++ b/mother-frontend/micro-services/tsconfig.json
@@ -1,3 +1,8 @@
 {
-	"extends": "@windows98/linters/ts-config/base",
+	"extends": [
+		"@windows98/linters/ts-config/base"
+	],
+	"include": [
+		"./**/*"
+	],
 }
