feat(ma): import tsconfig config, exclude it in tsconfig.json and add a new command lint:types:run

--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -25,18 +25,19 @@
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "^1.41.1",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "18.2.43",
+    "@types/react-dom": "18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "@windows98/app": "workspace:*",
     "@windows98/design-system": "workspace:*",
     "@windows98/eslint-config": "workspace:*",
     "@windows98/i18n": "workspace:*",
+    "@windows98/linters": "workspace:*",
     "@windows98/stylelint-config": "workspace:*",
     "@windows98/toolkit": "workspace:*",
     "sass": "1.62.1",
     "stylelint": "16.2.1",
-    "typescript": "5.2.2",
+    "typescript": "5.4.2",
     "vite": "5.0.8",
     "vite-plugin-css-injected-by-js": "^3.3.1",
     "vite-plugin-dts": "^3.7.0",
@@ -54,6 +55,7 @@
     "lint:js:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\"",
     "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\" --fix",
+    "lint:types:run": "tsc",
     "test:ui:run": "playwright test -c ./@test/playwright/playwright-ct.config.ts",
     "test:ui:watch": "playwright test -c ./@test/playwright/playwright-ct.config.ts --ui",
     "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.ts",
