--- a/mother-frontend/micro-apps/tsconfig.json
+++ b/mother-frontend/micro-apps/tsconfig.json
@@ -1,31 +1,9 @@
 {
-  "extends": "../../tsconfig.paths.json",
-  "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "preserve",
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "types": ["vite/client"],
-
-    /* Experimental */
-    "experimentalDecorators": true
-  },
-  "include": ["@bundler/src/**/*", "calendar"],
-  "exclude": ["node_modules"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+	"extends": [
+		"@windows98/linters/ts-config/react",
+		"@windows98/linters/ts-config/vite",
+	],
+	"include": [
+		"./**/*"
+	],
 }
