refactor(all): delete unneeded workspace mother-frontend

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,4 @@ packages:
   - core/tests/*
   - core/toolkit
   - micro-apps
-  - mother-frontend
-  - mother-frontend/micro-apps
-  - mother-frontend/micro-services
+  - mother-frontend/*
