--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -35,6 +35,7 @@
     "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\"",
     "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\" --fix",
+    "lint:types:run": "tsc",
     "preview": "vite preview @bundler",
     "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.ts",
     "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.ts",
@@ -52,9 +53,8 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "@windows98/eslint-config": "workspace:*",
+    "@windows98/linters": "workspace:*",
     "@windows98/stylelint-config": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "sass": "^1.70.0",
     "stylelint": "16.2.1",
     "typescript": "^5.2.2",
