--- a/core/linters/src/configs/ts-config/vue.config.json
+++ b/core/linters/src/configs/ts-config/vue.config.json
@@ -1,8 +1,10 @@
 {
+	"extends": "./base.config.json",
 	"compilerOptions": {
 		"jsx": "preserve",
 		"types": [
-			"vite/client"
+			"vue",
+			"vue-i18n"
 		]
 	}
 }
