--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "lint:js": "eslint -c ./@linter/eslint.config.cjs --ext \".ts,.js,.vue\" .",
     "lintfix:js": "eslint -c ./@linter/eslint.config.cjs --fix --ext \".ts,.js,.vue\" .",
     "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"Bundles/**/*.scss\"",
-    "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"Bundles/**/*.scss\" --fix"
+    "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"Bundles/**/*.scss\" --fix",
+    "lint:types:run": "vue-tsc --noEmit"
   },
   "dependencies": {
     "pinia": "^2.1.3",
@@ -30,6 +31,7 @@
     "@windows98/i18n": "workspace:*",
     "@windows98/micro-apps": "workspace:*",
     "@windows98/micro-services": "workspace:*",
+    "@windows98/linters": "workspace:*",
     "@windows98/stylelint-config": "workspace:*",
     "jsdom": "^22.1.0",
     "sass": "^1.62.1",
@@ -37,6 +39,7 @@
     "typescript": "^5.0.4",
     "vite": "5.0.8",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.31.4"
+    "vitest": "^0.31.4",
+    "vue-tsc": "2.0.6"
   }
 }
