--- a/core/ci-cd/package.json
+++ b/core/ci-cd/package.json
@@ -8,6 +8,14 @@
   },
   "type": "module",
   "scripts": {
+    "lint:code:run:all": "pnpm run lint:code:run:app && pnpm run lint:code:run:design-system && pnpm run lint:code:run:i18n && pnpm run lint:code:run:micro-apps && pnpm run lint:code:run:micro-services && pnpm run lint:code:run:toolkit",
+    "lint:code:run:app": "pnpm --filter @windows98/app run lint:code:run",
+    "lint:code:run:design-system": "pnpm --filter @windows98/design-system run lint:code:run",
+    "lint:code:run:i18n": "pnpm --filter @windows98/i18n run lint:code:run",
+    "lint:code:run:linters": "pnpm --filter @windows98/linters run lint:code:run",
+    "lint:code:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:run",
+    "lint:code:run:micro-services": "pnpm --filter @windows98/micro-services run lint:code:run",
+    "lint:code:run:toolkit": "pnpm --filter @windows98/toolkit run lint:code:run",
     "lint:types:run:all": "pnpm run lint:types:run:app && pnpm run lint:types:run:design-system && pnpm run lint:types:run:i18n && pnpm run lint:types:run:micro-apps && pnpm run lint:types:run:micro-services && pnpm run lint:types:run:toolkit",
     "lint:types:run:app": "pnpm --filter @windows98/app run lint:types:run",
     "lint:types:run:design-system": "pnpm --filter @windows98/design-system run lint:types:run",
