--- a/core/linters/package.json
+++ b/core/linters/package.json
@@ -15,7 +15,7 @@
 		"./ts-config/vue": "./src/configs/ts-config/vue.config.json"
 	},
 	"scripts": {
-		"lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+		"lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
 		"lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\""
 	},
 	"devDependencies": {
