--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -13,7 +13,7 @@
     "typescript": "5.4.2"
   },
   "scripts": {
-    "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
     "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:types:run": "tsc"
   }
